--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,6 @@ dist-ssr
 .env.local
 .env.production.local
 .env.development.local
+
+# Google Sheets config (contains sensitive IDs)
+src/config/googleSheets.js
