--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@vitejs/plugin-react": "^4.2.1",
     "@vitest/ui": "^1.6.1",
     "gh-pages": "^6.1.0",
+    "happy-dom": "^20.0.11",
     "jsdom": "^27.3.0",
     "vite": "^5.0.8",
     "vitest": "^1.6.1"
