--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,6 +31,9 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Setup config file for tests
+        run: cp src/config/googleSheets.example.js src/config/googleSheets.js
+
       - name: Run tests
         run: npm run test:run
 
