--- a/package.json
+++ b/package.json
@@ -5,13 +5,9 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "npm run test:run && vite build",
+    "build": "vite build",
     "preview": "vite preview",
-    "deploy": "npm run build && gh-pages -d dist",
-    "test": "vitest",
-    "test:run": "vitest run",
-    "test:ui": "vitest --ui",
-    "test:coverage": "vitest run --coverage"
+    "deploy": "npm run build && gh-pages -d dist"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.0",
@@ -20,16 +16,10 @@
     "react-router-dom": "^7.10.1"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^6.9.1",
-    "@testing-library/react": "^16.3.0",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
-    "@vitest/ui": "^1.6.1",
     "gh-pages": "^6.1.0",
-    "happy-dom": "^20.0.11",
-    "jsdom": "^27.3.0",
-    "vite": "^5.0.8",
-    "vitest": "^1.6.1"
+    "vite": "^5.0.8"
   }
 }
